add file defines for easy use.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.13)
 project(ffmpeg_transcoder)
 
-option(USE_BMCODEC "Use bitmain hardware codec" ON)
+option(USE_BMCODEC "Use bitmain hardware codec" OFF)
 
 set(CMAKE_CXX_STANDARD 14)
 
@@ -9,7 +9,11 @@ if (USE_BMCODEC)
     set(FFMPEG_ROOT $ENV{HOME}/yuan/bm_ffmpeg_sdk)
     add_definitions(-DUSE_BMCODEC=1)
 else()
-    set(FFMPEG_ROOT $ENV{HOME}/ffmpeg-4.2.1)
+    if (APPLE)
+        set(FFMPEG_ROOT /usr/local)
+    else()
+        set(FFMPEG_ROOT $ENV{HOME}/ffmpeg-4.2.1)
+    endif()
 endif()
 
 set(ffmpeg_inc_dirs ${FFMPEG_ROOT}/include)
