--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.13)
 project(ffmpeg_transcoder)
 
-option(USE_BMCODEC "Use bitmain hardware codec" OFF)
+option(USE_BMCODEC "Use bitmain hardware codec" ON)
 
 set(CMAKE_CXX_STANDARD 14)
 
